# Physical-AI-Humanoid-Robotics-Text-Book

./: .eslintignore  .eslintrc.js  .gitignore  GEMINI.md  QWEN.md  README.md  config-update-checklist.md  docusaurus.config.ts  package-lock.json  package.json  test_api_contracts.py  test_api_standardized_responses.py  test_concurrent_queries.py  test_e2e_flow.py  test_end_to_end.py  test_integration_complete_flow.py  test_system_validation.py  verify-migration.bat
.claude/agents/: rag-chatbot-integrator.md
.docusaurus/: client-manifest.json  client-modules.js  codeTranslations.json  docusaurus.config.mjs  i18n.json  registry.js  routes.js  routesChunkNames.json
.specify/memory/: constitution.md
backend/: .env.example  analyze_page.py  content_ingestion.py  main.py  pyproject.toml  quickstart.md  requirements.txt  test_content_extraction.py  test_doc_ingestion.py  test_implementation.py  test_ingestion_pipeline.py  test_sitemap.py  test_sitemap_content.py  test_sitemap_fixed.py
backend/rag_agent/api/: query_router.py
backend/rag_agent/models/: query.py  request.py  response.py  retrieval.py  session.py
backend/rag_agent/services/: agent_service.py  retrieval_client.py  validation_service.py
backend/rag_agent/utils/: citation_formatter.py  response_formatter.py
backend/retrieval/: __init__.py  embedding_service.py  query_processor.py  validation.py  vector_search.py
backend/src/: config.py  httpx_patch.py  logging_config.py  main.py  openai_service.py  qdrant_service.py  query_processing_service.py  rag_agent_service.py  validation_service.py
backend/src/api/: api.py  query_endpoint.py
backend/src/models/: endpoint_response.py  error_log.py  query.py  query_request.py  rag_agent_response.py  response.py
backend/src/services/: error_handler.py  rag_agent.py
backend/tests/contract/: test_error_handling.py  test_json_format.py  test_query_endpoint.py
backend/tests/integration/: test_error_handling.py  test_fallback_responses.py  test_query_flow.py
book-frontend/: docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.js  sidebars.ts
book-frontend/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
docs/module-3-ai-robot-brain/: 02-isaac-sim.md  (+3 more)
frontend/: .env.example  App.js  package.json  requirements.txt
src/digital_twin_examples/: package.xml  setup.py
src/digital_twin_examples/launch/: simulation_us1.launch.py  simulation_us3.launch.py
src/digital_twin_examples/urdf/: robot.urdf  robot_sensors.urdf
(+247 files in other folders)
