[project]
name = "rag-content-ingestion"
version = "0.1.0"
description = "RAG backend for AI-native textbook - content ingestion and vector storage"
authors = [{name = "AI Textbook Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=4.0.0",
    "qdrant-client>=1.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]