[project]
name = "rag-agent-api"
version = "0.1.0"
description = "RAG Agent API for textbook content retrieval and response generation"
authors = [{name = "AI Textbook Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.10.0",
    "fastapi>=0.105.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]