<?xml version="1.0"?>
<package format="3">
  <name>digital_twin_examples</name>
  <version>0.0.0</version>
  <description>Examples for the Digital Twin module.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
